# analizador-bursatil

./: .coverage  .dockerignore  .env.example  .gitignore  ANALISIS_PROYECTO.md  ARCHITECTURE.md  CONFIGURACION_API_KEYS.md  Dockerfile  GUIA_VIDEO_PRESENTACION.md  QUICKSTART.md  README.md  SONARCLOUD_SETUP.md  docker-compose.yml  install.bat  install.py  logging.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.bat  run_app.py  sonar-project.properties
.github/workflows/: sonar.yml
benchmarks/: README.md  benchmark_performance.py  quick_benchmark.py
docs/: DIAGRAMAS.md
docs/diagrams/: 1_arquitectura_completa.mmd  1_jerarquias_herencia.mmd  2_flujo_arquitectura.mmd  2_patrones_diseno.mmd  3_flujo_secuencia.mmd  4_jerarquia_clases.mmd  5_stack_tecnologico.mmd  INSTRUCCIONES_EXPORTAR.md  README_EXPORT.md  arquitectura_completa_limpia.mmd  class_diagram_complete.mmd  class_diagram_simplified.mmd
ejemplos/: create_excel.py  symbols.csv  symbols.json  symbols.txt  symbols_example.txt
src/: __init__.py  main.py
src/analizador_bursatil.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data_cleaner/: __init__.py  cleaner.py
src/data_extractor/: __init__.py  base_extractor.py  config.py  extractor.py  yahoo_extractor.py
src/data_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data_extractor/adapters/: alpha_vantage_adapter.py  binance_adapter.py  stooq_adapter.py  tiingo_adapter.py  yahoo_adapter.py
src/data_extractor/core/: base.py  base_adapter.py  base_provider.py  errors.py  market_data.py  normalizer.py  registry.py
src/data_extractor/core/base/: base_adapter.py  base_provider.py  base_series.py
src/data_extractor/models/: base_series.py  series.py
src/data_extractor/providers/: alpha_vantage_provider.py  binance_provider.py  stooq_provider.py  tiingo_provider.py  yahoo_provider.py
src/data_extractor/series/: __init__.py  performance_series.py  price_series.py  volatility_series.py  volume_activity_series.py
src/logs/: __init__.py  logging.yaml  logs_handler.py
src/models/: price_series.py
src/reporting/: __init__.py  monte_carlo_reporter.py
src/simulation/: __init__.py  monte_carlo.py  portfolio.py
src/ui/: app_config.py  dashboard.py  error_handler.py  file_loader.py  input_normalizer.py  services_backend.py  sidebars.py  utils.py  views.py
src/ui/sidebars/: __init__.py  cartera_sidebar.py  datos_sidebar.py  montecarlo_sidebar.py  reporte_sidebar.py  types.py
src/ui/views/: __init__.py  cartera_view.py  datos_view.py  montecarlo_view.py  reporte_view.py
src/utils/: __init__.py
tests/: conftest.py  utils_http.py
tests/integration/: conftest.py
tests/integration/adapters/: test_binance_integration.py  test_stooq_integration.py  test_tiingo_integration.py  test_yahoo_integration.py
tests/units/: test_data_cleaner.py  test_extractor.py  test_normalizer.py
tests/units/adapters/: test_base_adapter_unit.py  test_binance_adapter_unit.py  test_stooq_adapter_unit.py  test_tiingo_adapter_unit.py  test_yahoo_adapter_unit.py
tests/units/providers/: test_base_provider_unit.py
tests/units/simulation/: test_monte_carlo.py  test_portfolio.py
tests/units/test_simulation/: __init__.py
