[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-extractor"
version = "0.1.0"
description = "Data extractor adapters (Binance, AlphaVantage, Yahoo) with a BaseAdapter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pandas_datareader>=0.10", "yfinance>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_extractor*"]

