[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analizador-bursatil"
version = "0.1.0"
description = "Analizador bursátil con simulación Monte Carlo y múltiples fuentes de datos financieros."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data processing
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    
    # Financial data sources
    "yfinance>=0.2",
    "pandas_datareader>=0.10",
    
    # UI and visualization
    "streamlit>=1.28",
    "matplotlib>=3.7",
    
    # Scientific computing
    "scipy>=1.11",
    
    # Utilities
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_extractor*"]

