[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analizador-bursatil"
version = "0.1.0"
description = "Analizador bursátil con simulación Monte Carlo y múltiples fuentes de datos financieros."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alejandro García-Caro Nombela", email = "alex_garci_17@gmail.com"}
]
keywords = ["finance", "stock", "analysis", "monte-carlo", "streamlit", "yfinance", "binance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core data processing
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    
    # Financial data sources
    "yfinance>=0.2",
    "pandas_datareader>=0.10",
    
    # UI and visualization
    "streamlit>=1.28",
    "matplotlib>=3.7",
    
    # Scientific computing
    "scipy>=1.11",
    
    # Utilities
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
analizador-bursatil = "run_app:main"
bursatil = "run_app:main"

[project.urls]
Homepage = "https://github.com/AlejandroGCN/analizador-bursatil"
Repository = "https://github.com/AlejandroGCN/analizador-bursatil"
Issues = "https://github.com/AlejandroGCN/analizador-bursatil/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_extractor*"]

